Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,14 @@ h1 {
   margin: 0;
 }
 
+i {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
 @media only screen and (min-width: 38em) {
 
   html {
@@ -218,7 +226,7 @@ h1 {
   .japan3 {
     padding-left: 2em;
     padding-right: 2em;
-    font-size: .75rem;
+    font-size: 1rem;
   }
 
   .light {
@@ -247,12 +255,12 @@ h1 {
   }
 
   h3 {
-    font-size: .85rem;
+    font-size: 1rem;
   }
 
   li {
     padding-left: 1em;
-    font-size: 1rem;
+    font-size: .9rem;
   }
 
   .footer {
